<resources>
    <string name="app_name">BD推送</string>
    <string name="usb_name">内置硬盘</string>
    <string name="setting">设置</string>
    <string name="no_down_task">当前无下载任务</string>
    <string name="down_list">下载列表</string>
    <string name="down_com">下载完成</string>
    <string name="no_down_com">当前无完成任务</string>
    <string name="resource_list">资源列表</string>
    <string name="choose_path_notice">菜单键选择为默认下载路径</string>
    <string name="floating_window">悬浮窗</string>
    <string name="file_management">文件管理</string>
    <string name="browse">浏览</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="default_path">默认下载路径</string>
    <string name="quit">退出</string>
    <string name="binding">绑定</string>
</resources>
