<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_0"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_10"
            android:focusable="false">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_23"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@drawable/back" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_23" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:focusable="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_146"
        android:paddingRight="@dimen/dp_146">

        <ImageView
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@drawable/png1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:text="@string/floating_window"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/mSwitch"
            android:layout_width="@dimen/dp_62"
            android:layout_height="@dimen/dp_19"
            android:checked="true"
            android:focusable="false"
            android:showText="false"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_custom_thumb_selecto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:focusable="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_146"
        android:paddingRight="@dimen/dp_146">

        <ImageView
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@drawable/png2" />

        <TextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:text="设置默认下载路径（home:download）"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:focusable="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_146"
        android:paddingRight="@dimen/dp_146">


        <ImageView
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@drawable/png3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:text="@string/file_management"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>
</LinearLayout>
